--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1cc41320>"
+       "<matplotlib.collections.PathCollection at 0x1a196c4358>"
       ]
      },
      "execution_count": 2,
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "Text(0.5, 1.0, 'Logistic Regression')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "(500, 2)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,16 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_nn = Y.reshape(1,(500)) #Your code here\n"
+    "# Y_nn = Y.reshape(1,(500)) #Your code here\n",
+    "Y_nn = np.reshape(Y,(1,(500)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +396,7 @@
        "((2, 500), (1, 500))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,153 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.98553633e-01, -5.94966046e-01, -3.92606162e-01, -3.15968392e-01,\n",
-       "       -6.22618408e-02, -8.01071690e-01,  1.00816914e+00, -5.36042476e-02,\n",
-       "       -1.36196088e-01, -9.88928208e-01,  5.64758104e-01,  7.85250884e-01,\n",
-       "        7.74176833e-01,  5.58329363e-01,  9.07121200e-01,  9.37162087e-01,\n",
-       "       -7.99087509e-01,  4.58499417e-01, -2.84788587e-01,  1.02684872e+00,\n",
-       "       -8.69193490e-01,  3.09709170e-02,  2.31538284e-02,  5.70899456e-01,\n",
-       "       -9.57389366e-01, -3.62320587e-01,  1.23957038e-01,  3.68169092e-02,\n",
-       "        6.71357733e-01, -5.92423995e-01, -8.03368923e-01, -6.39843083e-01,\n",
-       "        7.03799500e-01,  5.27858756e-01,  5.58521889e-01,  3.82565803e-01,\n",
-       "       -2.51639758e-01, -5.18465429e-01,  6.33957120e-01, -6.53603034e-01,\n",
-       "       -5.89487527e-01,  1.01648364e+00,  1.77752937e-01,  7.23069199e-01,\n",
-       "        2.35184982e-01,  5.35262607e-01,  9.67468497e-01, -8.86839308e-03,\n",
-       "        6.92954011e-01, -5.05312936e-01,  3.68242120e-01, -1.12643872e-01,\n",
-       "        1.03599760e+00, -9.71896141e-01,  4.69836460e-01,  2.10817444e-02,\n",
-       "        7.34424647e-02, -6.34242439e-01,  1.38284086e-01, -9.85430381e-01,\n",
-       "        7.71991270e-01,  5.86768952e-01, -2.70729970e-01, -9.27122358e-02,\n",
-       "       -6.92261373e-01, -7.21136859e-01, -2.89497883e-01, -5.17814228e-01,\n",
-       "       -6.25730470e-01, -3.30765557e-02, -4.13343428e-01,  7.35328804e-01,\n",
-       "       -9.38256312e-01, -7.09180432e-01,  1.45514115e-04, -8.83259615e-01,\n",
-       "        5.11336426e-01, -5.20378560e-01, -8.30783788e-01,  8.89802469e-01,\n",
-       "       -9.16604777e-01, -6.20930622e-01, -7.44740092e-01,  8.59385281e-01,\n",
-       "       -3.36475041e-01,  2.25268902e-01, -8.19824527e-02,  4.74391053e-01,\n",
-       "       -3.36944800e-01, -9.01696660e-01, -8.16953009e-01,  1.01481955e+00,\n",
-       "        5.60092235e-01,  1.61437921e-01,  5.16481410e-01,  7.33033556e-01,\n",
-       "       -1.08137410e+00,  6.73296769e-01, -9.21969882e-01,  5.05518017e-01,\n",
-       "        3.91240709e-01,  4.72281199e-01,  7.37790609e-01, -8.11467833e-01,\n",
-       "        1.06985211e-01,  1.21579242e-01, -4.94110454e-01, -5.21549550e-01,\n",
-       "       -7.55513190e-01,  3.92337763e-01,  3.95260222e-01,  2.41402018e-01,\n",
-       "        4.53164008e-01,  4.05092197e-01,  8.91149144e-01, -6.07776458e-01,\n",
-       "       -8.07149247e-01, -2.02177056e-01,  2.81590941e-01, -8.53856158e-01,\n",
-       "        1.47939447e-01,  7.96765217e-01,  9.22883687e-01, -9.48056471e-01,\n",
-       "        9.19620605e-01,  4.99430222e-01, -7.79808967e-01,  2.65059150e-01,\n",
-       "       -3.69578208e-01, -8.32860181e-01, -8.48039830e-01, -7.96252915e-01,\n",
-       "       -2.73217945e-01, -2.20847355e-01,  8.27342565e-01,  1.10390428e+00,\n",
-       "        9.70739456e-01,  6.70128136e-01, -7.45202744e-01,  8.96686702e-03,\n",
-       "       -5.44002851e-01, -3.78108447e-01, -6.47170467e-01, -2.25643495e-01,\n",
-       "       -8.69404585e-01, -5.42387916e-01, -4.63602512e-01, -8.75610194e-01,\n",
-       "        7.88551977e-01,  4.46059410e-01,  5.72850486e-01,  3.19710062e-01,\n",
-       "        1.94860260e-02, -4.22235527e-01,  3.49691771e-01, -7.74597516e-01,\n",
-       "        7.92314138e-01, -7.49857793e-01,  4.20705269e-01, -2.04865125e-01,\n",
-       "       -4.39282784e-01, -5.27842234e-01,  5.42433891e-01,  3.67548797e-01,\n",
-       "        8.17242718e-01, -2.75350907e-01,  9.28417746e-01, -8.47753756e-01,\n",
-       "       -2.50858014e-01, -7.37726806e-01,  3.03795587e-01,  7.84060471e-01,\n",
-       "        6.90131701e-01, -4.17246950e-01, -1.67797711e-01, -5.65788895e-01,\n",
-       "       -7.88135079e-01,  6.62483615e-01,  6.83538660e-01,  7.72360514e-01,\n",
-       "       -6.07575379e-01, -9.41996362e-02,  7.35990202e-01,  9.60192465e-01,\n",
-       "        6.55816744e-01, -7.13834618e-01, -1.05852208e-01,  5.42847737e-01,\n",
-       "        8.86881756e-01, -1.70495970e-01,  5.08294223e-01,  8.93850414e-01,\n",
-       "       -9.11568321e-01, -6.47614286e-01,  3.60228510e-01, -8.54096946e-01,\n",
-       "        6.42418878e-01,  1.06894673e+00,  2.96812315e-01, -5.52238214e-01,\n",
-       "       -5.73833703e-01,  8.10987397e-01, -6.06006501e-01, -8.79052518e-01,\n",
-       "       -7.36226192e-01,  9.44791015e-01,  6.78503194e-01,  8.91981156e-01,\n",
-       "        9.07279299e-01, -4.04882841e-01,  3.90236259e-01,  7.25728010e-01,\n",
-       "       -8.69335127e-01,  4.34502182e-01, -2.33004484e-01, -7.93573229e-01,\n",
-       "        8.14013090e-01,  8.31229170e-01,  7.14608653e-01, -1.03550053e+00,\n",
-       "       -2.45811458e-01,  7.02606282e-01,  2.13408592e-01,  8.11378890e-01,\n",
-       "       -5.98895511e-01, -9.31531975e-01, -2.42003253e-01, -5.83347354e-01,\n",
-       "       -5.19719682e-01,  3.05537426e-01, -4.89431011e-01, -6.69997804e-01,\n",
-       "       -5.24259539e-01, -5.38753532e-01,  3.51623611e-01,  7.83332299e-02,\n",
-       "        7.18271545e-01, -2.70994694e-01,  5.13919381e-01,  4.31061929e-01,\n",
-       "       -8.97736381e-01,  7.71309282e-01,  1.01709024e+00,  6.98933873e-01,\n",
-       "        9.37467905e-01,  7.69258406e-01,  5.81181408e-01,  9.79013320e-01,\n",
-       "        4.82846454e-01, -1.06489202e+00, -3.54387815e-01, -3.76683097e-01,\n",
-       "       -1.03540602e+00,  6.30479900e-01, -7.79465567e-01, -1.75109575e-01,\n",
-       "        9.13876597e-01, -4.37895972e-01, -1.07191971e+00,  7.05538884e-01,\n",
-       "        1.59750321e-01, -3.25852523e-01, -3.00583028e-01, -1.03861694e-01,\n",
-       "       -8.04865864e-01,  4.99952838e-01,  3.28189548e-01, -5.41543562e-01,\n",
-       "        8.67997814e-01,  8.06377610e-02,  1.18944430e-02,  1.62676594e-01,\n",
-       "        6.80732096e-01, -5.34835192e-01,  8.43334130e-01,  1.12942199e+00,\n",
-       "       -9.91525824e-01, -6.56488844e-01,  9.03939849e-01, -1.00176402e+00,\n",
-       "        1.15536854e-01,  2.34618016e-01, -1.52001129e-01,  7.52560340e-01,\n",
-       "       -4.57035970e-01,  6.73979865e-01,  4.23653971e-01,  4.92509680e-01,\n",
-       "       -6.49184928e-01,  1.00854458e+00,  9.50624311e-01,  8.75586872e-01,\n",
-       "       -3.95579759e-01,  4.36087217e-01, -1.08213425e+00, -1.53494334e-01,\n",
-       "       -5.20495175e-01,  1.15072388e-01, -1.11191740e+00,  3.50064501e-01,\n",
-       "       -7.61250864e-01, -1.00323195e+00,  4.63231771e-02, -7.01418660e-01,\n",
-       "       -6.67189938e-01, -1.04041508e+00,  6.42656797e-01,  6.24358764e-01,\n",
-       "        1.68999167e-01, -1.02635932e+00, -1.20471340e-01, -7.39593792e-01,\n",
-       "       -6.70848084e-01,  1.20903389e-01, -6.75911382e-02,  6.65585189e-01,\n",
-       "       -2.31180418e-01, -4.97596067e-01,  5.21762337e-01,  2.10978426e-01,\n",
-       "       -8.18858223e-02, -1.13339265e+00,  2.11016330e-01, -7.80902429e-01,\n",
-       "        2.00696987e-01,  6.85971512e-01,  9.22088120e-01, -1.01775088e+00,\n",
-       "        6.76415041e-01,  6.58184910e-02, -9.01430419e-02, -5.73028213e-01,\n",
-       "       -5.17675496e-01,  1.04443639e+00,  8.11501589e-01,  8.29383217e-01,\n",
-       "        6.43588599e-01, -9.82349244e-01,  7.42442994e-01, -7.27274574e-01,\n",
-       "        3.94540830e-01,  5.88627842e-01, -6.02774497e-01, -7.40986897e-01,\n",
-       "       -6.92650147e-02,  4.56532306e-01,  1.12815897e+00, -3.83677325e-01,\n",
-       "        1.99946166e-01,  7.57492390e-01, -1.10711749e+00,  3.31286507e-01,\n",
-       "       -1.75466650e-01, -1.05203623e+00, -6.39869057e-01,  5.01173733e-01,\n",
-       "        1.57258607e-01,  1.72330849e-01, -1.36858151e-01,  8.43450646e-01,\n",
-       "       -1.89871579e-01, -1.79794145e-02, -5.79829679e-01, -2.97135455e-01,\n",
-       "        8.17048651e-01,  4.43832430e-01,  3.23755658e-01, -8.74104171e-02,\n",
-       "       -1.39671803e-01,  4.15329186e-01, -4.62598978e-01, -9.93771529e-01,\n",
-       "       -6.35356886e-01, -9.43886346e-01,  8.99956572e-01,  2.57833819e-01,\n",
-       "        2.03652047e-01,  2.69987430e-01, -1.05024328e+00, -8.42720303e-01,\n",
-       "       -4.19195373e-01, -8.29378377e-01,  2.57644869e-01,  8.17440403e-01,\n",
-       "       -7.32999577e-01,  2.92872940e-01, -9.91495433e-01,  1.07195385e+00,\n",
-       "       -5.56481074e-01,  7.87240956e-01,  7.98385369e-01,  8.88416165e-01,\n",
-       "        1.07687079e+00,  9.40329993e-01, -6.87589549e-01, -6.91169805e-01,\n",
-       "       -8.21031021e-01, -8.07526618e-01, -9.04513317e-01, -3.49142796e-01,\n",
-       "        1.05918664e+00, -4.42410339e-01,  2.39337041e-01,  1.59966575e-01,\n",
-       "        8.76446798e-01, -7.37865783e-01,  3.54607229e-01,  9.35191644e-01,\n",
-       "        9.74732873e-01,  7.40010233e-01,  6.14450184e-01,  1.62577825e-01,\n",
-       "        8.69022439e-01, -7.53645315e-02, -8.31354089e-01, -1.69937494e-01,\n",
-       "        3.03895801e-01, -8.29373702e-01, -7.67208233e-01,  1.05597729e+00,\n",
-       "        7.81743150e-01,  6.70257441e-01, -7.74229818e-01,  7.15667965e-01,\n",
-       "       -7.77611141e-01, -8.13750747e-01,  7.09217325e-01, -1.61085409e-01,\n",
-       "        2.57395489e-02, -6.40748132e-01,  5.82565917e-01,  3.09450856e-01,\n",
-       "        8.54047763e-01, -8.16178249e-01,  2.76821121e-01,  7.15740264e-01,\n",
-       "       -7.28651905e-01,  2.05455023e-02, -3.79457740e-01, -4.63934471e-01,\n",
-       "        1.42668409e-01, -3.94853525e-01,  8.47171876e-01, -8.60311639e-01,\n",
-       "       -5.15174310e-01, -3.48625362e-01,  3.03745773e-01, -3.87633446e-01,\n",
-       "       -6.02370699e-01, -1.05031095e+00,  4.86128262e-01, -5.38998903e-01,\n",
-       "       -8.13479258e-01,  8.09204173e-03, -5.45896255e-01, -7.61136545e-01,\n",
-       "       -8.81623073e-01, -6.39816912e-01, -8.35303067e-01, -3.46716314e-01,\n",
-       "        1.91172010e-01,  7.65753691e-01, -6.00562059e-01,  8.91137182e-01,\n",
-       "        6.74713131e-01, -6.15646906e-01,  1.21530709e+00,  1.59594361e-01,\n",
-       "        5.22236252e-02,  2.11232551e-01, -1.67723363e-01,  3.21761251e-01,\n",
-       "        6.69256188e-01, -4.13498738e-01,  9.07380403e-01, -5.13507840e-01,\n",
-       "       -4.49061169e-01, -3.94693865e-01, -9.23101916e-01,  8.19097901e-01,\n",
-       "       -2.42798824e-01,  6.37286375e-01, -1.43301315e-01,  3.97072425e-01,\n",
-       "       -1.01761342e+00, -8.40296123e-01, -7.02652140e-01,  8.35917113e-01,\n",
-       "        5.76183846e-01,  2.20179935e-01, -9.92065426e-01, -9.82625390e-01,\n",
-       "       -5.30935997e-01,  9.20888959e-01,  9.11451732e-01, -6.45713806e-01,\n",
-       "        6.49016948e-01, -2.79935347e-01, -8.24332606e-01, -9.42879944e-01])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# X_nn[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +520,7 @@
        "          0.1093393 ]]), 'b2': array([[0.]])}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +591,7 @@
        "(6, 500)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +611,7 @@
        "(1, 500)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +631,7 @@
        "(6, 500)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +651,7 @@
        "(1, 500)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +711,7 @@
        "0.6931475711935989"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +869,7 @@
        "          0.10938032]]), 'b2': array([[1.82562182e-06]])}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +962,7 @@
        "Text(0.5, 1.0, 'Decision Boundary for neural network with 1 hidden layer')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1135,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
